--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,4 +57,5 @@ extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js
   - https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js
 plugins:
+  - search
   - open-in-new-tab
