--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,9 @@ theme:
   features:
     - content.code.copy
     - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - content.tooltips
   palette:
     - media: "(prefers-color-scheme)"
       toggle:
@@ -29,6 +32,7 @@ theme:
 nav:
   - Home:
     - 'index.md'
+    - 'about.md'
   - API Naolib:
     - 'list_all_stops.md'
     - 'stops_near_lat_long.md'
@@ -47,6 +51,8 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - md_in_html
+  - abbr
 extra_css:
   - stylesheets/extra.css
   - stylesheets/hljs.css
