--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -26,5 +26,6 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-open-in-new-tab
+      - run: pip install neoteroi-mkdocs
       - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
